tests/sksl/errors/ArrayOfVoid.glsl
### Compilation failed:

error: 3: type 'void' may not be used in an array
error: 4: type 'void' may not be used in an array
error: 6: type 'void' may not be used in an array
error: 7: type 'void' may not be used in an array
error: 8: type 'void' may not be used in an array
error: 9: type 'void' may not be used in an array
6 errors
